manifests/manifests/kube-addon-manager.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kube-addon-manager
  namespace: kube-system
  labels:
    app: kubernetes
    component: addon-manager
    version: v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: kubernetes
        component: addon-manager
        version: v1
    spec:
      containers:
        - name: kube-addon-manager
          image: gcr.io/google_containers/kube-addon-manager:v5.1
          resources:
            requests:
              cpu: 5m
              memory: 50Mi
          volumeMounts:
            - name: addons
              mountPath: /etc/kubernetes/
              readOnly: true
        - name: kube-addon-manager-data
          image: ${hyperkube}:${kube_version}
          command:
            - /copy-addons.sh
          volumeMounts:
            - name: addons
              mountPath: /srv/kubernetes/
              readOnly: false
      volumes:
        - name: addons
          emptyDir: {}
