manifests/manifests/heapster.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: heapster
  namespace: kube-system
  labels:
    kubernetes.io/name: Heapster
spec:
  ports:
    - port: 80
      targetPort: 8082
  selector:
    k8s-app: heapster

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: heapster-v1.1.0
  namespace: kube-system
  labels:
    k8s-app: heapster
    version: v1.1.0
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: heapster
      version: v1.1.0
  template:
    metadata:
      labels:
        k8s-app: heapster
        version: v1.1.0
    spec:
      containers:
        - name: heapster
          image: gcr.io/google_containers/heapster:v1.1.0
          command:
            - /heapster
            - --source=kubernetes.summary_api:''
            - --metric_resolution=60s
          resources:
            limits:
              cpu: 100m
              memory: 250Mi
            requests:
              cpu: 100m
              memory: 250Mi
        - name: heapster-nanny
          image: gcr.io/google_containers/addon-resizer:1.0
          command:
            - /pod_nanny
            - --cpu=100m
            - --extra-cpu=0m
            - --memory=250Mi
            - --extra-memory=4Mi
            - --threshold=5
            - --deployment=heapster-v1.0.2
            - --container=heapster
            - --poll-period=300000
          resources:
            limits:
              cpu: 50m
              memory: 100Mi
            requests:
              cpu: 50m
              memory: 100Mi
