manifests/manifests/kube-controller.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kube-controller-manager
  namespace: kube-system
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '10252'
  labels:
    name: kube-controller-manager
spec:
  selector:
    app: kubernetes
    component: controller-manager
  ports:
  - name: metrics
    port: 10252
    protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: kube-apiserver
  namespace: kube-system
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/scheme: 'https'
  labels:
    name: kube-apiserver
spec:
  selector:
    app: kubernetes
    component: apiserver
  ports:
  - name: metrics
    port: 443
    protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: kube-flannel-server
  namespace: kube-system
  annotations:
    prometheus.io/probe: 'true'
    prometheus.io/port: '10259'
  labels:
    name: kube-flannel-server
spec:
  selector:
    app: kubernetes
    component: flannel-server
  ports:
  - name: metrics
    port: 10259
    protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: kube-etcd
  namespace: kube-system
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '2381'
  labels:
    app: kubernetes
    component: etcd
spec:
  selector:
    app: kubernetes
    component: etcd
  ports:
  - name: metrics
    port: 2381
    protocol: TCP

---
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: kube-etcd
  labels:
    app: kubernetes
    component: etcd
spec:
  template:
    metadata:
      labels:
        app: kubernetes
        component: etcd
    spec:
      nodeSelector:
        role: controller
      hostNetwork: true
      containers:
        - name: kube-etcd
          image: quay.io/roboll/etcd-metrics-proxy:v0.5
          args:
            - --upstream-server-name=controller
            - --etcd-ca=/etc/ssl/etcd/ca.pem
            - --etcd-cert=/etc/ssl/etcd/cert.pem
            - --etcd-key=/etc/ssl/etcd/privkey.pem
          resources:
            requests:
              cpu: 5m
              memory: 50Mi
          volumeMounts:
            - mountPath: /etc/ssl/etcd
              name: etcd-certs
              readOnly: true
      volumes:
        - name: etcd-certs
          hostPath:
            path: /etc/ssl/etcd
