manifests/manifests/kube-flannel-server.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kube-flannel-server
  namespace: kube-system
  labels:
    name: kube-flannel-server
spec:
  selector:
    app: kubernetes
    component: flannel-server
  ports:
  - name: flannel
    port: 8888
    protocol: TCP

---
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: kube-flannel-server
  labels:
    app: kubernetes
    component: flannel-server
spec:
  template:
    metadata:
      labels:
        app: kubernetes
        component: flannel-server
    spec:
      nodeSelector:
        role: controller
      hostNetwork: true
      containers:
        - name: flannel-server
          image: quay.io/coreos/flannel:0.5.5
          command:
            - /opt/bin/flanneld
            - --listen=0.0.0.0:8888
            - --etcd-endpoints=https://localhost:2379
            - --etcd-cafile=/etc/ssl/etcd/ca.pem
            - --etcd-certfile=/etc/ssl/etcd/cert.pem
            - --etcd-keyfile=/etc/ssl/etcd/privkey.pem
            - --remote-cafile=/etc/ssl/kube/ca.pem
            - --remote-certfile=/etc/ssl/kube/cert.pem
            - --remote-keyfile=/etc/ssl/kube/privkey.pem
          securityContext:
            privileged: true
          livenessProbe:
            tcpSocket:
              port: 8888
          volumeMounts:
            - mountPath: /etc/ssl/kube
              name: kube-certs
              readOnly: true
            - mountPath: /etc/ssl/etcd
              name: etcd-certs
              readOnly: true
            - mountPath: /etc/ssl/certs
              name: ssl-certs-host
              readOnly: true
      volumes:
        - hostPath:
            path: /etc/ssl/kube
          name: kube-certs
        - hostPath:
            path: /etc/ssl/etcd
          name: etcd-certs
        - hostPath:
            path: /usr/share/ca-certificates
          name: ssl-certs-host
