manifests/manifests/kube-metrics.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kube-etcd
  namespace: kube-system
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/scheme: 'https'
    prometheus.io/port: '2381'
  labels:
    app: kubernetes
    component: etcd
spec:
  selector:
    app: kubernetes
    component: etcd
  ports:
  - name: metrics
    port: 2381
    protocol: TCP

---
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: kube-etcd
  labels:
    app: kubernetes
    component: etcd
spec:
  template:
    metadata:
      labels:
        app: kubernetes
        component: etcd
    spec:
      nodeSelector:
        role: controller
      hostNetwork: true
      containers:
        - name: kube-etcd
          image: ${etcd_metrics}
          args:
            - --upstream-server-name=controller
            - --etcd-ca=/etc/ssl/etcd/ca.pem
            - --etcd-cert=/etc/ssl/etcd/cert.pem
            - --etcd-key=/etc/ssl/etcd/privkey.pem
          resources:
            requests:
              cpu: 5m
              memory: 50Mi
          volumeMounts:
            - mountPath: /etc/ssl/etcd
              name: etcd-certs
              readOnly: true
      volumes:
        - name: etcd-certs
          hostPath:
            path: /etc/ssl/etcd
