manifests/manifests/kube-scheduler.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kube-scheduler
  namespace: kube-system
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "10251"
  labels:
    name: kube-scheduler
spec:
  selector:
    app: kubernetes
    component: scheduler
  ports:
  - name: metrics
    port: 10251
    protocol: TCP

---
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: kube-scheduler
  namespace: kube-system
  labels:
    app: kubernetes
    component: scheduler
spec:
  template:
    metadata:
      labels:
        app: kubernetes
        component: scheduler
    spec:
      nodeSelector:
        role: controller
      hostNetwork: true
      containers:
        - name: kube-scheduler
          image: ${hyperkube}:${kube_version}
          command:
            - /hyperkube
            - scheduler
            - --master=https://${kube_fqdn}
            - --kubeconfig=/etc/kubernetes/controller/kubeconfig.yaml
            - --leader-elect=true
          livenessProbe:
            httpGet:
              host: 127.0.0.1
              path: /healthz
              port: 10251
            initialDelaySeconds: 15
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /etc/ssl/kube/ca.pem
              name: kube-ca
              readOnly: true
            - mountPath: /etc/ssl/controller
              name: controller-certs
              readOnly: true
            - mountPath: /etc/kubernetes/controller/kubeconfig.yaml
              name: kubeconfig
              readOnly: true
      volumes:
        - hostPath:
            path: /etc/ssl/kube/ca.pem
          name: kube-ca
        - hostPath:
            path: /etc/ssl/controller
          name: controller-certs
        - hostPath:
            path: /etc/kubernetes/controller/kubeconfig.yaml
          name: kubeconfig
