manifests/manifests/kube-dashboard.yaml
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: kube-dashboard
  namespace: kube-system
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
      - tools.${fqdn}
      secretName: dashboard-acme-tls
  rules:
  - host: tools.${fqdn}
    http:
      paths:
        - path: /dashboard/
          backend:
            serviceName: kubernetes-dashboard
            servicePort: 80
